--- a/Recommendations_with_IBM-zh.html
+++ b/Recommendations_with_IBM-zh.html
@@ -14640,8 +14640,8 @@ The 3 most similar users to user 46 are: Int64Index([4201, 23, 3782], dtype=&#39
 
         <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">recs</span><span class="p">)</span> <span class="o">&gt;</span> <span class="n">m</span><span class="p">:</span>
             <span class="k">break</span>
-
-    <span class="k">return</span> <span class="n">recs</span>  <span class="c1"># return your recommendations for this user_id</span>
+    <span class="c1">#Modified </span>
+    <span class="k">return</span> <span class="n">recs</span><span class="p">[:</span><span class="n">m</span><span class="p">]</span>  <span class="c1"># return your recommendations for this user_id</span>
 </pre></div>
 
     </div>
